# pytorch_lightning

./: README.md  config.py  fmnist_classifier.py  fmnist_data.py  main.py  pyproject.toml
configs/: config.yaml
configs/opt/: adam.yaml  sgd.yaml
