[tool.poetry]
name = "tasks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torchvision = "^0.14.1"
hydra-core = "^1.3.2"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
dotenv = "^0.0.5"
pydantic = "^1.10.5"
pytorch-lightning = "^1.9.3"
setuptools = "^67.4.0"
torch = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
